user registration system modified